--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,19 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+        <h1 class="navbar-brand">Grocery List Manager</h1>
+    </div>
+</nav>
+
+  <app-root>Loading...</app-root>
+
 </body>
 </html>
